--- a/addons/bird_config/static/src/css/bootstrap_bird/config.json
+++ b/addons/bird_config/static/src/css/bootstrap_bird/config.json
@@ -23,16 +23,16 @@
     "@font-size-base": "14px",
     "@font-size-large": "ceil((@font-size-base * 1.25))",
     "@font-size-small": "ceil((@font-size-base * 0.85))",
-    "@font-size-h1": "floor((@font-size-base * 1.6))",
-    "@font-size-h2": "floor((@font-size-base * 1.4))",
-    "@font-size-h3": "ceil((@font-size-base * 1.3))",
+    "@font-size-h1": "floor((@font-size-base * 2.6))",
+    "@font-size-h2": "floor((@font-size-base * 1.85))",
+    "@font-size-h3": "ceil((@font-size-base * 1.5))",
     "@font-size-h4": "ceil((@font-size-base * 1.25))",
     "@font-size-h5": "@font-size-base",
     "@font-size-h6": "ceil((@font-size-base * 0.85))",
     "@line-height-base": "1.428571429",
     "@line-height-computed": "floor((@font-size-base * @line-height-base))",
     "@headings-font-family": "inherit",
-    "@headings-font-weight": "500",
+    "@headings-font-weight": "600",
     "@headings-line-height": "1.1",
     "@headings-color": "inherit",
     "@icon-font-path": "\"../fonts/\"",
@@ -103,13 +103,13 @@
     "@input-group-addon-bg": "@gray-lighter",
     "@input-group-addon-border-color": "@input-border",
     "@cursor-disabled": "not-allowed",
-    "@dropdown-bg": "#fff",
+    "@dropdown-bg": "#000",
     "@dropdown-border": "rgba(0,0,0,.15)",
     "@dropdown-fallback-border": "#ccc",
     "@dropdown-divider-bg": "#e5e5e5",
-    "@dropdown-link-color": "@gray-dark",
-    "@dropdown-link-hover-color": "darken(@gray-dark, 5%)",
-    "@dropdown-link-hover-bg": "#f5f5f5",
+    "@dropdown-link-color": "white",
+    "@dropdown-link-hover-color": "white",
+    "@dropdown-link-hover-bg": "rgba(128,128,128, 0.25)",
     "@dropdown-link-active-color": "@component-active-color",
     "@dropdown-link-active-bg": "@component-active-bg",
     "@dropdown-link-disabled-color": "@gray-light",
@@ -431,5 +431,5 @@
     "scrollspy.js",
     "transition.js"
   ],
-  "customizerUrl": "http://getbootstrap.com/customize/?id=ce495428b51016a8580c834ab4fc6522"
+  "customizerUrl": "http://getbootstrap.com/customize/?id=6ffb5645cf1e06d6488d0a063b7b84ef"
 }
