[ADD] changed bootstrap fonts behavior

--- a/addons/bird_config/static/src/css/bootstrap_bird/config.json
+++ b/addons/bird_config/static/src/css/bootstrap_bird/config.json
@@ -16,11 +16,11 @@
     "@link-color": "@brand-primary",
     "@link-hover-color": "darken(@link-color, 15%)",
     "@link-hover-decoration": "underline",
-    "@font-family-sans-serif": "\"Helvetica Neue\", Helvetica, Arial, sans-serif",
+    "@font-family-sans-serif": "\"MuseoSans100-Regular\", Helvetica, Arial, sans-serif",
     "@font-family-serif": "Georgia, \"Times New Roman\", Times, serif",
     "@font-family-monospace": "Menlo, Monaco, Consolas, \"Courier New\", monospace",
     "@font-family-base": "@font-family-sans-serif",
-    "@font-size-base": "14px",
+    "@font-size-base": "18px",
     "@font-size-large": "ceil((@font-size-base * 1.25))",
     "@font-size-small": "ceil((@font-size-base * 0.85))",
     "@font-size-h1": "floor((@font-size-base * 2.6))",
@@ -32,7 +32,7 @@
     "@line-height-base": "1.428571429",
     "@line-height-computed": "floor((@font-size-base * @line-height-base))",
     "@headings-font-family": "inherit",
-    "@headings-font-weight": "600",
+    "@headings-font-weight": "bold",
     "@headings-line-height": "1.1",
     "@headings-color": "inherit",
     "@icon-font-path": "\"../fonts/\"",
@@ -431,5 +431,5 @@
     "scrollspy.js",
     "transition.js"
   ],
-  "customizerUrl": "http://getbootstrap.com/customize/?id=6ffb5645cf1e06d6488d0a063b7b84ef"
+  "customizerUrl": "http://getbootstrap.com/customize/?id=7c80b933ac2bebd48f3d4678935e9829"
 }
