[ADD] change fonts behavior

--- a/addons/bird_config/static/src/css/bootstrap_bird/config.json
+++ b/addons/bird_config/static/src/css/bootstrap_bird/config.json
@@ -16,7 +16,7 @@
     "@link-color": "@brand-primary",
     "@link-hover-color": "darken(@link-color, 15%)",
     "@link-hover-decoration": "underline",
-    "@font-family-sans-serif": "\"MuseoSans100-Regular\", Helvetica, Arial, sans-serif",
+    "@font-family-sans-serif": "\"MuseoSans\", Helvetica, Arial, sans-serif",
     "@font-family-serif": "Georgia, \"Times New Roman\", Times, serif",
     "@font-family-monospace": "Menlo, Monaco, Consolas, \"Courier New\", monospace",
     "@font-family-base": "@font-family-sans-serif",
@@ -431,5 +431,5 @@
     "scrollspy.js",
     "transition.js"
   ],
-  "customizerUrl": "http://getbootstrap.com/customize/?id=7c80b933ac2bebd48f3d4678935e9829"
+  "customizerUrl": "http://getbootstrap.com/customize/?id=245c8cb0813a81de10bf0eedf636721f"
 }
